styled the different project icons using ids. Fixed spacing issues

--- a/lesson-3-figma-to-webpage/styles.css
+++ b/lesson-3-figma-to-webpage/styles.css
@@ -43,7 +43,8 @@ h2 {
   letter-spacing: 0%;
   text-align: center;
   color: #331e6a;
-  margin: 16px auto;
+  margin: 16px auto 30px;
+
   max-width: 850px;
 }
 
@@ -136,19 +137,23 @@ h2 {
 }
 
 /*****  PROJECTS SECTION *****/
+.project-container {
+  display: flex;
+}
+
 .project {
   display: flex;
   justify-content: center;
   align-items: center;
   max-width: 1060px;
-  margin: 0 auto 48px auto;
+  margin: 0 auto 32px auto;
 }
 
 .icon-box {
   display: inline-block;
   width: 160px;
   height: 160px;
-  background-color: #19acff;
+
   border-radius: 6px;
 }
 
@@ -156,6 +161,24 @@ h2 {
   text-align: center;
   vertical-align: middle;
   line-height: 130px;
+  font-family: Poppins;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 100%;
+  color: #ffffff;
+}
+
+#icon-box-1 {
+  background-color: #19acff;
+}
+#icon-box-2 {
+  background-color: #ffe819;
+}
+#icon-box-2 p {
+  color: #000000;
+}
+#icon-box-3 {
+  background-color: #ff1919;
 }
 
 .project-text {
@@ -163,6 +186,22 @@ h2 {
   flex-direction: column;
   align-items: flex-start;
   gap: 20px;
+}
+
+.project-text h4 {
+  font-family: Poppins;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 100%;
+  color: #291854;
+}
+
+.project-text p {
+  font-family: Inter;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #55206d;
 }
 
 .project-text h4,
